fixed heading order

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>an easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats</p>
         </section>
         <section class="bg-rose-50">
-            <p>Preparation time</h3>
+            <p>Preparation time</p>
             <ul>
                 <li><span class="bold">Total:</span> Approximately 10 minutes</li>
                 <li><span class="bold">Preparation:</span> 5 minutes</li>
